--- a/src/views/flying-game-overlay.html
+++ b/src/views/flying-game-overlay.html
@@ -52,14 +52,18 @@
 }
 
 .score-disp {
+    background-image: url('../src/assets/img/score-frame.png');
     position: absolute; 
     left: 50%; 
     top: 11%;
     transform: translate(-50%, -50%); 
+ 
+}
+
+.score-number {
     font-size: 5vh;
     font-weight: 800; color: #228AED;
 }
-
 
 
     </style>
@@ -70,7 +74,10 @@
         <a href="#" onclick="pause(); loadPage('../src/views/pause.html','overlay');" class="image-button top-right-1"><img src="../src/assets/img/pause-button.png" alt="pause"></a>
         <a href="#" onclick="loadPage('../src/views/settings.html','overlay')" class="image-button top-right-2"><img src="../src/assets/img/settings-button.png" alt="settings"></a>
         <div id="icons"></div>
-        <div id="scoreboard" class = "score-disp" style="position: absolute; left: 50%; top: 11%; transform: translate(-50%, -50%); font-size: 5vh; font-family: Arial, Helvetica, sans-serif; font-weight: 800; color: #228AED;">0</div>
+        <div class ="score-disp">
+           
+        </div>
+        
     </div>
 
 </body>
